--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Jerry Xie",
   "license": "MIT",
   "scripts": {
-    "compile": "babel src -d dist",
+    "compile": "babel src -d dist --source-maps",
     "start": "npm run compile && node dist/eventloop.js"
   },
   "dependencies": {
